# Forecasting-Sales

./: .gitignore  README.md
src/: .pre-commit-config.yaml  initial_setup.ps1  pyproject.toml  run.py  training_scripts.py
src/conf/local/forecasting/: forecasting_config.json
src/data/02_preprocessed_data/: preprocessed_stores_sales_forecasting.csv
src/data/03_forecasting/: forecasting_result.json
src/env/: requirements-dev.txt  requirements.txt
src/forecasting_sales/: pipeline_manager.py
src/forecasting_sales/nodes/base/: abstract_node.py
src/forecasting_sales/nodes/base/storage/: local_storage.py
src/forecasting_sales/nodes/forecasting/: node.py
src/forecasting_sales/nodes/forecasting/storage/: local_storage.py
src/forecasting_sales/nodes/preprocessing/: node.py
src/forecasting_sales/nodes/preprocessing/storage/: local_storage.py
src/forecasting_sales/tools/data_science/: forecasting.py
src/forecasting_sales/tools/utils/: filesystem.py  logging.py  pickle.py
src/notebooks/: EDA.ipynb
