[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "forecasting-sales"
version = "0.1.0"
description = "An example Python package"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11.0"
dataclasses-json = "^0.6.7"
pandas = "^2.3.1"
numpy = "^2.3.2"
xgboost = "^3.0.3"
scikit-learn = "^1.7.1"
statsmodels = "^0.14.5"
fire = "^0.6.0"
typing_extensions = "^4.14.1"

[tool.poetry.dev-dependencies]
pyspark = "^3.5.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
radon = "^6.0.1"
xenon = "^0.9.1"
pre-commit = "^3.7.1"